# selfhosted-claw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.control-plane  README.md  README_ja.md  README_zh.md  docker-compose.control-plane.yml  ecosystem.config.cjs  graphify.toml  makefile  package-lock.json  package.json
.claude/: settings.json
.husky/: graphify-pre-commit.sh  pre-commit
admin-ui/: index.html  tsconfig.json  vite.config.ts
bridge/bt-audio-bridge/: Cargo.toml  README.md
bridge/bt-audio-bridge/src/: capture.rs  endpoint_watcher.rs  endpoints.rs  main.rs  render.rs  service.rs  session.rs  ws.rs
container/: Dockerfile  entrypoint.sh
docs/: BRANCH-FORK-MAINTENANCE.md  DEBUG_CHECKLIST.md  INTEGRATIONS.md  README.md  REQUIREMENTS.md  SECURITY.md  SPEC.md  adr-deep-research-runspec.md  architecture-refactor.md  docker-sandboxes.md  skills-as-branches.md  voice-tools-summary.md
scripts/: cleanup-sessions.sh  inbound-message-guard.mjs  pm2-resurrect.bat  voice-tools-smoke.mjs
setup/: agent-runner-response-fallback.test.ts  control-plane-service.test.ts  control-plane-service.ts  control-plane-state.test.ts  control-plane-state.ts  environment.ts  groups.ts  index.ts  platform.ts  register.ts  signal.ts  sms-socket-relay.test.ts  sms-socket-relay.ts  timezone.ts  verify.ts
src/: admin-server.test.ts  admin-server.ts  agent-memory.ts  agent-path-resolver.ts  channel-runtime.ts  config.ts  contact-resolution.test.ts  contact-resolution.ts  container-runner-manifest.test.ts  container-runner.test.ts  container-runner.ts  (+46 more)
(+213 files in other folders)
